[package]
name = "iris"
version = "0.1.0"
edition = "2021"
description = "Live supervisor TUI for all active Claude Code sessions"
license = "MIT"
repository = "https://github.com/itzenata/iris"
homepage = "https://itzenata.github.io/iris/"
readme = "README.md"
keywords = ["claude", "tui", "terminal", "dashboard", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
serde_json = "1"
anyhow = "1"
chrono = "0.4"
dirs = "5"
ureq = "2"

[dev-dependencies]
# Test-only: auto-cleaning temp dirs so tests never touch ~/.claude/iris.
# Not compiled into the release binary.
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
